Import all data files into pandas data frames

--- a/01_data_imports.ipynb
+++ b/01_data_imports.ipynb
@@ -153,6 +153,43 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Scientific Aviation Data\n",
+    "\n",
+    "#### Submission details\n",
+    "- Only submitted Phase I estimates\n",
+    "- Submitted on 2023-01-21\n",
+    "\n",
+    "#### QC Indicator\n",
+    "Initial Spreadsheet reports quantification estimates for all releases, and indicates if release does not meet Scientific Aviation criteria by printing the text in grey. All greyed out releases include a comment explaining why the measurement was not valid\n",
+    "\n",
+    "- Entries in the \"Comments\" column:\n",
+    "- \"*not enough of plumes captured at low end due to restrictions in altitude (powerlines)\"\n",
+    "- \"* same as above\" (referring to powerline problem)\n",
+    "- \"*too few laps\"\n",
+    "- \"*too few laps; upwind interference from landfill\"\n",
+    "- \"*not enough of plume captured near surface\""
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [],
+   "source": [
+    "# Scientific Aviation data import\n",
+    "\n",
+    "sciav_path = pathlib.PurePath('00_raw_data', 'SciAv_Stage1_submitted-2023-02-21.xlsx')\n",
+    "sciav_1 = pd.read_excel(sciav_path)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
