Start cleaning up GHGSat data, errors with importing. Pausing to update PyCharm

--- a/02_data_cleaning.ipynb
+++ b/02_data_cleaning.ipynb
@@ -2,19 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'convert_to_twentyfour' from 'data_methods' (/Users/sea/PycharmProjects/CRF22_Airplanes/data_methods.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mImportError\u001B[0m                               Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[37], line 5\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mpandas\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mpd\u001B[39;00m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mpathlib\u001B[39;00m\n\u001B[0;32m----> 5\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mdata_methods\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m convert_utc, convert_to_twentyfour\n",
+      "\u001B[0;31mImportError\u001B[0m: cannot import name 'convert_to_twentyfour' from 'data_methods' (/Users/sea/PycharmProjects/CRF22_Airplanes/data_methods.py)"
+     ]
+    }
+   ],
    "source": [
     "# Imports\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pathlib\n",
-    "from data_methods import convert_utc\n",
-    "\n",
-    "# from datetime import datetime, timedelta # for easily adjusting timezones"
+    "from data_methods import convert_utc, convert_to_twentyfour"
    ]
   },
   {
@@ -51,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "# Carbon Mapper Stage 1\n",
@@ -94,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# GHGSat Stage 1\n",
@@ -138,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 129,
    "outputs": [],
    "source": [
     "# Kairos Stage 1\n",
@@ -183,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 130,
    "outputs": [],
    "source": [
     "# Scientific Aviation data import\n",
@@ -222,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 131,
    "outputs": [],
    "source": [
     "# Array with column names for clean data\n",
@@ -251,14 +261,15 @@
     "\n",
     "#### Required data cleaning:\n",
     "\n",
-    "QuantifiedPlume:\n",
-    "- CarbonMapper reports whether they quantified a plume using two metrics:\n",
-    "    - \"CR plume present (Y/N)\" indicates whether they detected a plume. \"N\" indicates that they do not detect a plume, ie they are estimating 0 kgh\n",
-    "    - \"Good Quality (Y/N)\" indicates if they quantified the plume observed or not.\n",
-    "- For data cleaning, if \"CR plume present (Y/N)\" == \"Y\" AND \"Good Quality (Y/N)\" == Y, then QuantifiedPlume = 1;\n",
-    "- For now, I will exclude zero values from the quantification plot\n",
+    "- QuantifiedPlume:\n",
+    "    - CarbonMapper reports whether they quantified a plume using two metrics:\n",
+    "        - \"CR plume present (Y/N)\" indicates whether they detected a plume. \"N\" indicates that they do not detect a plume, ie they are estimating 0 kgh\n",
+    "        - \"Good Quality (Y/N)\" indicates if they quantified the plume observed or not.\n",
+    "    - For data cleaning, if \"CR plume present (Y/N)\" == \"Y\" AND \"Good Quality (Y/N)\" == Y, then QuantifiedPlume = 1;\n",
+    "    - For now, I will exclude zero values from the quantification plot\n",
     "\n",
-    "TimestampUTC: CarbonMapper reports in local time (UTC - 7), needs to be adjusted to UTC\n",
+    "- TimestampUTC: CarbonMapper reports in local time (UTC - 7), needs to be adjusted to UTC\n",
+    "- QCFlag: CarbonMapper only uses on QC indicator (\"Good Quality (Y/N)\"), so I use a QC flag of \"CM-1\" for all items that fail to pass their QC test. For items that pass QC test, I use \"clear\"\n",
     "\n",
     "#### Notes:\n",
     "- For detection capabilities, use \"CR plume present (Y/N)\" column. \"Y\" indicates detection by Carbon Mapper, \"N\" indicates no detection by Carbon Mapper"
@@ -269,11 +280,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Carbon Mapper data cleaning\n",
-    "cm_clean = pd.DataFrame(columns =report_col)\n",
     "\n",
     "# Carbon Mapper conducted 121 overpasses\n",
     "total_overpass = 121\n",
@@ -326,6 +336,152 @@
     "cm_clean = pd.DataFrame(overpass_list)"
    ],
    "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Clean GHGSat Data\n",
+    "\n",
+    "#### Required Data Cleaning:\n",
+    "- PerformerExperimentID:\n",
+    "    - Current ExperimentID is a 54 character string including indicators for date, time, line number and frame. The last entry is an indicator for overpass number that starts at 1 and incrementally increases with each overpass\n",
+    "    - Replace this with GH-1, GH-2, etc.\n",
+    "- TimestampUTC: GHGSat reports in local time (UTC - 7), needs to be adjusted to UTC\n",
+    "- QCFlag: add \"GH-\" prefix to the QC flags used by GHGSat\n",
+    "- QuantifiedPlume: if QCFlag (defined below in notes) is 1 or 2, I will consider this a valid and submitted quantification.\n",
+    "- UncertaintyType: 1-sigma\n",
+    "\n",
+    "#### Notes:\n",
+    "- QC Flags as defined by GHGSat:\n",
+    "    - 1 = \"Good conditions\"\n",
+    "    - 2 = \"Emissions detected and quantified, but suboptimal conditions may affect SR\" (what is SR?)\n",
+    "    - 3 = \"Emissions detected, but not quantified due to suboptimal conditions\"\n",
+    "    - 4 = \"Diffuse emissions visible over site (presumably from previous release, due to low wind)\"\n",
+    "    - 5 = \"Discarded (Bad weather/conditions, including clouds, cloud shadow, highly irregular aircraft trajectory, etc.)\"\n",
+    "- It looks like in some instances, GHGSat quantified plumes with QC Flag = 4, and in some places they did not. For now, I am not including any of QC-4 but will need to look into this more rigorously\n",
+    "- QuantifiedPlume: compare QCFlags 1 and 2 for any significant difference in error estimation"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'strftime'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[4], line 16\u001B[0m\n\u001B[1;32m     12\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m overpass \u001B[38;5;129;01min\u001B[39;00m gh_overpasses:\n\u001B[1;32m     13\u001B[0m \n\u001B[1;32m     14\u001B[0m     \u001B[38;5;66;03m# Convert local time to UTC\u001B[39;00m\n\u001B[1;32m     15\u001B[0m     local_time \u001B[38;5;241m=\u001B[39m ghg_1\u001B[38;5;241m.\u001B[39mloc[overpass\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mTimestamp (hyperspectral technologies only)\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n\u001B[0;32m---> 16\u001B[0m     utc_time \u001B[38;5;241m=\u001B[39m \u001B[43mconvert_utc\u001B[49m\u001B[43m(\u001B[49m\u001B[43mlocal_time\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m7\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m     18\u001B[0m     \u001B[38;5;66;03m# Determine if plume was quantified and set emission rate and uncertainty based on the reported QC flags by GHGSat\u001B[39;00m\n\u001B[1;32m     19\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m ghg_1\u001B[38;5;241m.\u001B[39mloc[overpass\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mQC Flag \u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m1\u001B[39m \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;241m2\u001B[39m:\n",
+      "File \u001B[0;32m~/PycharmProjects/CRF22_Airplanes/data_methods.py:16\u001B[0m, in \u001B[0;36mconvert_utc\u001B[0;34m(dt, delta_t)\u001B[0m\n\u001B[1;32m     13\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mconvert_utc\u001B[39m(dt, delta_t):\n\u001B[1;32m     14\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"Convert input time (dt) to UTC. detla_t is the time difference between local time and UTC time. For Arizona,\u001B[39;00m\n\u001B[1;32m     15\u001B[0m \u001B[38;5;124;03m    this value is + 7 hours\"\"\"\u001B[39;00m\n\u001B[0;32m---> 16\u001B[0m     local_hr \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mint\u001B[39m(\u001B[43mdt\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mstrftime\u001B[49m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m%\u001B[39m\u001B[38;5;124mH\u001B[39m\u001B[38;5;124m'\u001B[39m))\n\u001B[1;32m     17\u001B[0m     local_min \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mint\u001B[39m(dt\u001B[38;5;241m.\u001B[39mstrftime(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m%\u001B[39m\u001B[38;5;124mM\u001B[39m\u001B[38;5;124m'\u001B[39m))\n\u001B[1;32m     18\u001B[0m     local_sec \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mint\u001B[39m(dt\u001B[38;5;241m.\u001B[39mstrftime(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m%\u001B[39m\u001B[38;5;124mS\u001B[39m\u001B[38;5;124m'\u001B[39m))\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'str' object has no attribute 'strftime'"
+     ]
+    }
+   ],
+   "source": [
+    "# GHGSat Data Cleaning\n",
+    "\n",
+    "# GHGSat conducted 192 overpasses\n",
+    "total_overpass = 192\n",
+    "# Set Stage for data analysis (1, 2 or 3)\n",
+    "ghg_stage = 1\n",
+    "\n",
+    "# Code variables for iterating in the for loop\n",
+    "gh_overpasses = np.linspace(1, total_overpass, total_overpass) # for indexing for loop\n",
+    "overpass_list = [] # for generating all new rows\n",
+    "\n",
+    "for overpass in gh_overpasses:\n",
+    "\n",
+    "    # Convert local time to UTC\n",
+    "    local_time = ghg_1.loc[overpass-1, \"Timestamp (hyperspectral technologies only)\"]\n",
+    "    utc_time = convert_utc(local_time, 7)\n",
+    "\n",
+    "    # Determine if plume was quantified and set emission rate and uncertainty based on the reported QC flags by GHGSat\n",
+    "    if ghg_1.loc[overpass-1, \"QC Flag \"] == 1 or 2:\n",
+    "        quantified = 1\n",
+    "        emission_rate = ghg_1.loc[overpass-1, \"Emission Rate (kg/hr)\"]\n",
+    "        emission_upper = ghg_1.loc[overpass-1, \"FacilityEmissionRateUpper\"]\n",
+    "        emission_lower = ghg_1.loc[overpass-1, \"FacilityEmissionRateLower\"]\n",
+    "    else:\n",
+    "        quantified = 0\n",
+    "        emission_rate = float(\"nan\")\n",
+    "        emission_upper = float(\"nan\")\n",
+    "        emission_lower = float(\"nan\")\n",
+    "\n",
+    "    # Set QC flag:\n",
+    "    ghg_flag = ghg_1.loc[overpass-1, \"QC Flag\"]\n",
+    "    qc_flag = f'GH-{ghg_flag:1.0f}'\n",
+    "\n",
+    "\n",
+    "    new_row = {\n",
+    "            'Operator': 'GHGSat-AV',\n",
+    "            'Stage': ghg_stage,\n",
+    "            'PerformerExperimentID': f'GH-{overpass:1.0f}',\n",
+    "            'DateOfSurvey': ghg_1.loc[overpass-1, \"DateOfSurvey\"].strftime('%Y-%m-%d'),\n",
+    "            'TimestampUTC': utc_time,\n",
+    "            'QuantifiedPlume': quantified,\n",
+    "            'FacilityEmissionRate': emission_rate,\n",
+    "            'FacilityEmissionRateUpper': emission_upper,\n",
+    "            'FacilityEmissionRateLower': emission_lower,\n",
+    "            'UncertaintyType': '1-sigma',\n",
+    "            'OperatorWindspeed': ghg_1.loc[overpass-1, \"WindSpeed (m/s)\"],\n",
+    "            'QCFlag': qc_flag,\n",
+    "    }\n",
+    "    overpass_list.append(new_row)\n",
+    "\n",
+    "ghg_clean = pd.DataFrame(overpass_list)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1:45 PM\n",
+      "13:45:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "\n",
+    "def convert_to_twentyfour(time):\n",
+    "    \"\"\"Convert a string of format HH:MM AM/PM to 24 hour time. Used for converting GHGSat's reported timestamps\n",
+    "    from 12 hour time to 24 hour time. Output is of class datetime\"\"\"\n",
+    "    time_12hr = str(datetime.strptime(time, '%I:%M %p'))\n",
+    "    time_24hr = time_12hr[-8:]\n",
+    "    time_24hr = datetime.strptime(time_24hr, '%H:%M:%S')\n",
+    "    return time_24hr\n",
+    "\n",
+    "datetime_str = ghg_1.loc[63, \"Timestamp (hyperspectral technologies only)\"]\n",
+    "print(datetime_str)\n",
+    "gh_test = str(datetime.strptime(datetime_str, '%I:%M %p'))\n",
+    "gh_time_only = gh_test[-8:]\n",
+    "print(gh_time_only)\n",
+    "gh_time_only = datetime.strptime(gh_time_only, '%H:%M:%S')\n",
+    "# print(gh_test)\n",
+    "# print(gh_test[-8:])\n",
+    "\n",
+    "# test = convert_to_twentyfour(gh_test)\n",
+    "# print(test)"
+   ],
+   "metadata": {
     "collapsed": false
    }
   },
@@ -353,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "outputs": [],
    "source": [],
    "metadata": {
