Clean Kairos data, no errors but need to manually compare to their raw report

--- a/02_data_cleaning.ipynb
+++ b/02_data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -12,6 +12,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pathlib\n",
+    "import datetime\n",
     "from data_methods import convert_utc, convert_to_twentyfour"
    ]
   },
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,6 +142,13 @@
     "kairos_ls23_2 = pd.read_csv(kairos_ls23_2_path)\n",
     "kairos_ls25_2 = pd.read_csv(kairos_ls25_2_path)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -165,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,12 +203,12 @@
     "- FacilityEmissionRateLower: lower bound of uncertainty on quantification estimate\n",
     "- UncertaintyType: type of uncertainty for upper and lower values reported above\n",
     "- OperatorWindspeed: operator reported windspeed in m/s\n",
-    "- QCFlag: operator specific QC flag, first digits indicate operator"
+    "- QCFlag: operator specific QC flag, first digits indicate operator."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,8 +283,8 @@
     "    # If the overpass does not pass Carbon Mapper's criteria,\n",
     "    if cm_1.loc[overpass-1, \"Good Quality (Y/N)\"] == \"N\":\n",
     "        qc_flag = 'CM-1'\n",
-    "    else:\n",
-    "        qc_flag = 'clear' # for now, use flag \"clear\" to indicate if the overpass passes all operator QC\n",
+    "    # else:\n",
+    "    #     qc_flag = 'clear' # for now, use flag \"clear\" to indicate if the overpass passes all operator QC\n",
     "\n",
     "    # Convert local time to UTC\n",
     "    local_time = cm_1.loc[overpass-1, \"Timestamp (hyperspectral technologies only)\"]\n",
@@ -323,62 +331,19 @@
     "    - 3 = \"Emissions detected, but not quantified due to suboptimal conditions\"\n",
     "    - 4 = \"Diffuse emissions visible over site (presumably from previous release, due to low wind)\"\n",
     "    - 5 = \"Discarded (Bad weather/conditions, including clouds, cloud shadow, highly irregular aircraft trajectory, etc.)\"\n",
-    "- It looks like in some instances, GHGSat quantified plumes with QC Flag = 4, and in some places they did not. For now, I am not including any of QC-4 but will need to look into this more rigorously\n",
+    "- It looks like in some instances, GHGSat quantified plumes with QC Flag = 4, and in some places they did not. Will need to look into this more rigorously\n",
     "- QuantifiedPlume: compare QCFlags 1 and 2 for any significant difference in error estimation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      Operator  Stage PerformerExperimentID DateOfSurvey TimestampUTC  \\\n",
-      "0    GHGSat-AV      1                  GH-1   2022-10-31     17:03:54   \n",
-      "1    GHGSat-AV      1                  GH-2   2022-10-31     17:06:59   \n",
-      "2    GHGSat-AV      1                  GH-3   2022-10-31     17:10:46   \n",
-      "3    GHGSat-AV      1                  GH-4   2022-10-31     17:14:04   \n",
-      "4    GHGSat-AV      1                  GH-5   2022-10-31     17:17:09   \n",
-      "..         ...    ...                   ...          ...          ...   \n",
-      "187  GHGSat-AV      1                GH-188   2022-11-07     21:52:46   \n",
-      "188  GHGSat-AV      1                GH-189   2022-11-07     21:57:17   \n",
-      "189  GHGSat-AV      1                GH-190   2022-11-07     22:01:28   \n",
-      "190  GHGSat-AV      1                GH-191   2022-11-07     22:05:48   \n",
-      "191  GHGSat-AV      1                GH-192   2022-11-07     22:09:36   \n",
-      "\n",
-      "     QuantifiedPlume  FacilityEmissionRate  FacilityEmissionRateUpper  \\\n",
-      "0                  1                 151.0                      204.0   \n",
-      "1                  1                 129.0                      174.0   \n",
-      "2                  1                 209.0                      281.0   \n",
-      "3                  1                  88.0                      119.0   \n",
-      "4                  1                 108.0                      145.0   \n",
-      "..               ...                   ...                        ...   \n",
-      "187                1                  17.0                       26.0   \n",
-      "188                1                  11.0                       17.0   \n",
-      "189                1                   NaN                        NaN   \n",
-      "190                1                   NaN                        NaN   \n",
-      "191                1                   NaN                        NaN   \n",
-      "\n",
-      "     FacilityEmissionRateLower UncertaintyType  OperatorWindspeed QCFlag  \n",
-      "0                         98.0         1-sigma               1.60   GH-1  \n",
-      "1                         84.0         1-sigma               1.57   GH-1  \n",
-      "2                        137.0         1-sigma               1.57   GH-1  \n",
-      "3                         57.0         1-sigma               1.54   GH-1  \n",
-      "4                         71.0         1-sigma               1.53   GH-1  \n",
-      "..                         ...             ...                ...    ...  \n",
-      "187                        8.0         1-sigma               3.05   GH-1  \n",
-      "188                        5.0         1-sigma               3.07   GH-1  \n",
-      "189                        NaN         1-sigma                NaN   GH-1  \n",
-      "190                        NaN         1-sigma                NaN   GH-1  \n",
-      "191                        NaN         1-sigma                NaN   GH-1  \n",
-      "\n",
-      "[192 rows x 12 columns]\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# GHGSat Data Cleaning\n",
     "\n",
@@ -431,9 +396,191 @@
     "    }\n",
     "    overpass_list.append(new_row)\n",
     "\n",
-    "ghg_clean = pd.DataFrame(overpass_list)\n",
-    "print(ghg_clean)"
+    "ghg_clean = pd.DataFrame(overpass_list)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Clean Kairos Data\n",
+    "\n",
+    "#### Required Data Cleaning:\n",
+    "QC Flag:\n",
+    "- Kairos uses the following QC flags in their column \"Kairos Flag for Dropped Passes or Uncertain Rate Quantification\":\n",
+    "    - \"Plane deviated from flightline\"\n",
+    "    - \"PARTIAL DETECTION\"\n",
+    "    - \"Cutoff - low confidence quantification\"\n",
+    "    - \"Excessive methane pooling near site\"\n",
+    "    - \"Excessive methane pooling over site\" (appears twice - possible extra space at end?)\n",
+    "    - \"Plane deviation from flightpath\"\n",
+    "    - \"Glare\"\n",
+    "- Kairos reported for pods LS23 and LS25\n",
+    "\n",
+    "#### Notes:\n",
+    "- Starting with Pod LS23\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Operator  Stage PerformerExperimentID DateOfSurvey TimestampUTC  \\\n",
+      "0    Kairos - LS23      1                  KA-1     10/24/22     16:46:16   \n",
+      "1    Kairos - LS23      1                  KA-2     10/24/22     16:49:22   \n",
+      "2    Kairos - LS23      1                  KA-3     10/24/22     16:52:33   \n",
+      "3    Kairos - LS23      1                  KA-4     10/24/22     16:55:42   \n",
+      "4    Kairos - LS23      1                  KA-5     10/24/22     16:59:02   \n",
+      "..             ...    ...                   ...          ...          ...   \n",
+      "344  Kairos - LS23      1                KA-345     10/28/22     20:27:06   \n",
+      "345  Kairos - LS23      1                KA-346     10/28/22     20:30:10   \n",
+      "346  Kairos - LS23      1                KA-347     10/28/22     20:33:34   \n",
+      "347  Kairos - LS23      1                KA-348     10/28/22     20:36:39   \n",
+      "348  Kairos - LS23      1                KA-349     10/28/22     20:39:57   \n",
+      "\n",
+      "     QuantifiedPlume FacilityEmissionRate  FacilityEmissionRateUpper  \\\n",
+      "0                  0                    0                        NaN   \n",
+      "1                  0                    0                        NaN   \n",
+      "2                  0                  NaN                        NaN   \n",
+      "3                  0             17.57448                        NaN   \n",
+      "4                  0              30.7568                        NaN   \n",
+      "..               ...                  ...                        ...   \n",
+      "344                0            475.20016                        NaN   \n",
+      "345                0              556.924                        NaN   \n",
+      "346                0            468.15424                        NaN   \n",
+      "347                0             19.76352                        NaN   \n",
+      "348                0            149.15712                        NaN   \n",
+      "\n",
+      "     FacilityEmissionRateLower UncertaintyType  OperatorWindspeed QCFlag  \n",
+      "0                          NaN             nan                NaN  clear  \n",
+      "1                          NaN             nan                NaN  clear  \n",
+      "2                          NaN             nan                NaN   KA-1  \n",
+      "3                          NaN             nan               4.25  clear  \n",
+      "4                          NaN             nan               4.20  clear  \n",
+      "..                         ...             ...                ...    ...  \n",
+      "344                        NaN             nan               3.17  clear  \n",
+      "345                        NaN             nan               3.17  clear  \n",
+      "346                        NaN             nan               3.18  clear  \n",
+      "347                        NaN             nan               3.19  clear  \n",
+      "348                        NaN             nan               3.20  clear  \n",
+      "\n",
+      "[349 rows x 12 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Kairos Data Cleaning\n",
+    "\n",
+    "# Kairos conducted 349 overpasses\n",
+    "total_overpass = 349\n",
+    "# Set Stage for data analysis (1, 2 or 3)\n",
+    "kairos_stage = 1\n",
+    "\n",
+    "# Code variables for iterating in the for loop\n",
+    "kairos_overpasses = np.linspace(1, total_overpass, total_overpass) # for indexing for loop\n",
+    "overpass_list = [] # for generating all new rows\n",
+    "\n",
+    "for overpass in kairos_overpasses:\n",
+    "\n",
+    "    # Convert local time to UTC\n",
+    "    local_time = kairos_ls23_1.loc[overpass-1, \"Timestamp (hyperspectral technologies only)\"]\n",
+    "    local_time = datetime.datetime.strptime(local_time, '%H:%M:%S').time()\n",
+    "    utc_time = convert_utc(local_time, 7)\n",
+    "\n",
+    "    # Determine if plume was quantified and set emission rate and uncertainty based on the reported QC flags by GHGSat\n",
+    "    kairos_quantified = kairos_ls23_1.loc[overpass-1, \"Kairos Flag for Dropped Passes or Uncertain Rate Quantification\"]\n",
+    "    if pd.isna(kairos_quantified):\n",
+    "        emission_rate = kairos_ls23_1.loc[overpass-1, \"FacilityEmissionRate\"]\n",
+    "        emission_upper = kairos_ls23_1.loc[overpass-1, \"FacilityEmissionRateUpper\"]\n",
+    "        emission_lower = kairos_ls23_1.loc[overpass-1, \"FacilityEmissionRateLower\"]\n",
+    "    else:\n",
+    "        quantified = 0\n",
+    "        emission_rate = float(\"nan\")\n",
+    "        emission_upper = float(\"nan\")\n",
+    "        emission_lower = float(\"nan\")\n",
+    "\n",
+    "    # Set QC flag:\n",
+    "    kairos_flag = kairos_ls23_1.loc[overpass-1, \"Kairos Flag for Dropped Passes or Uncertain Rate Quantification\"]\n",
+    "    if pd.isna(kairos_flag):\n",
+    "        qc_flag = 'clear'\n",
+    "    elif kairos_flag[:5] == 'Plane':\n",
+    "        qc_flag = 'KA-1'\n",
+    "    elif kairos_flag[:5] == 'PARTI':\n",
+    "        qc_flag = 'KA-2'\n",
+    "    elif kairos_flag[:5] == 'Cutof':\n",
+    "        qc_flag = 'KA-3'\n",
+    "    elif kairos_flag[:5] == 'Exces':\n",
+    "        qc_flag = 'KA-4'\n",
+    "    elif kairos_flag[:5] == 'Glare':\n",
+    "        qc_flag = 'KA-5'\n",
+    "    else:\n",
+    "        qc_flag = 'ERROR! Identify misclassified QC'\n",
+    "\n",
+    "\n",
+    "    new_row = {\n",
+    "            'Operator': 'Kairos - LS23',\n",
+    "            'Stage': kairos_stage,\n",
+    "            'PerformerExperimentID': f'KA-{overpass:1.0f}',\n",
+    "            'DateOfSurvey': kairos_ls23_1.loc[overpass-1, \"DateOfSurvey\"],\n",
+    "            'TimestampUTC': utc_time,\n",
+    "            'QuantifiedPlume': quantified,\n",
+    "            'FacilityEmissionRate': emission_rate,\n",
+    "            'FacilityEmissionRateUpper': emission_upper,\n",
+    "            'FacilityEmissionRateLower': emission_lower,\n",
+    "            'UncertaintyType': 'nan',\n",
+    "            'OperatorWindspeed': kairos_ls23_1.loc[overpass-1, \"WindSpeed\"],\n",
+    "            'QCFlag': qc_flag,\n",
+    "    }\n",
+    "    overpass_list.append(new_row)\n",
+    "\n",
+    "kairos_clean = pd.DataFrame(overpass_list)\n",
+    "print(kairos_clean)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Scratch work\n",
+    "kairos_quantified = kairos_ls23_1.loc[2, \"Kairos Flag for Dropped Passes or Uncertain Rate Quantification\"]\n",
+    "print(kairos_quantified)\n",
+    "# if math.isnan(kairos_quantified):\n",
+    "#     print('Value is nan according to math')\n",
+    "# else:\n",
+    "#     print('Math can take a string and not throw an error!')\n",
+    "\n",
+    "if pd.isna(kairos_quantified):\n",
+    "    print('Value is nan according to pandas')\n",
+    "else:\n",
+    "    print('Numpy can take a string and not throw an error!')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "time = kairos_ls23_1.loc[overpass-1, \"Timestamp (hyperspectral technologies only)\"]\n",
+    "print(time)\n",
+    "datetime.datetime.strptime(time, '%H:%M:%S').time()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -457,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
