Debug Kairos clean data and compare to operator reports

--- a/02_data_cleaning.ipynb
+++ b/02_data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,11 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GHGSat Data Cleaning\n",
@@ -425,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -445,17 +441,17 @@
       "348  Kairos - LS23      1                KA-349     10/28/22     20:39:57   \n",
       "\n",
       "     QuantifiedPlume FacilityEmissionRate  FacilityEmissionRateUpper  \\\n",
-      "0                  0                    0                        NaN   \n",
-      "1                  0                    0                        NaN   \n",
+      "0                  1                    0                        NaN   \n",
+      "1                  1                    0                        NaN   \n",
       "2                  0                  NaN                        NaN   \n",
-      "3                  0             17.57448                        NaN   \n",
-      "4                  0              30.7568                        NaN   \n",
+      "3                  1             17.57448                        NaN   \n",
+      "4                  1              30.7568                        NaN   \n",
       "..               ...                  ...                        ...   \n",
-      "344                0            475.20016                        NaN   \n",
-      "345                0              556.924                        NaN   \n",
-      "346                0            468.15424                        NaN   \n",
-      "347                0             19.76352                        NaN   \n",
-      "348                0            149.15712                        NaN   \n",
+      "344                1            475.20016                        NaN   \n",
+      "345                1              556.924                        NaN   \n",
+      "346                1            468.15424                        NaN   \n",
+      "347                1             19.76352                        NaN   \n",
+      "348                1            149.15712                        NaN   \n",
       "\n",
       "     FacilityEmissionRateLower UncertaintyType  OperatorWindspeed QCFlag  \n",
       "0                          NaN             nan                NaN  clear  \n",
@@ -496,6 +492,7 @@
     "    # Determine if plume was quantified and set emission rate and uncertainty based on the reported QC flags by GHGSat\n",
     "    kairos_quantified = kairos_ls23_1.loc[overpass-1, \"Kairos Flag for Dropped Passes or Uncertain Rate Quantification\"]\n",
     "    if pd.isna(kairos_quantified):\n",
+    "        quantified = 1\n",
     "        emission_rate = kairos_ls23_1.loc[overpass-1, \"FacilityEmissionRate\"]\n",
     "        emission_upper = kairos_ls23_1.loc[overpass-1, \"FacilityEmissionRateUpper\"]\n",
     "        emission_lower = kairos_ls23_1.loc[overpass-1, \"FacilityEmissionRateLower\"]\n",
